--- a/login.html
+++ b/login.html
@@ -15,11 +15,11 @@
     <body>
 
 
-        <div class="limiter">
-            <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+        <div class="main">
+            <div class="login" style="background-image: url('images/bg-01.jpg');">
                 <div class="wrap-login100 ">
-                    <form class="login100-form">
-                        <span class="login100-form-title">
+                    <form class="login-form">
+                        <span class="login-form-title">
                             Login
                         </span>
                         <div class="wrap-input100 validate-input">
@@ -38,7 +38,7 @@
                             </a>
                         </div>
 
-                        <div class="container-login100-form-btn">
+                        <div class="container-login-form-btn">
                             <div class="wrap-login100-form-btn">
                                 <div class="login100-form-bgbtn"></div>
                                 <button class="login100-form-btn">
