--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
 
 
         <div class="main">
-            <div class="login">
-                <div class="wrap-login100 ">
+            <div class="login" style="background-image: url('images/bg-01.jpg');">
+                <div class="wrap-login100">
                     <form class="login-form">
                         <span class="login-form-title">
                             Login
